# Anjay

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  Doxyfile.in  LICENSE  NOTICE  README.Windows.md  README.md  compat  covconfig  devconfig  library.json  ltoconfig  requirements.txt  test_duplicates.py  test_headers.py  test_symbols.sh  test_visibility.py  test_visibility.sh  valgrind_test.supp
cmake/probe_crypto_engine_backend/: CMakeLists.txt
demo/: CMakeLists.txt  advanced_firmware_update.c  advanced_firmware_update.h  advanced_firmware_update_addimg.c  advanced_firmware_update_app.c  demo.c  demo.h  demo_args.c  demo_args.h  demo_cmds.c  demo_cmds.h  demo_time.c  demo_utils.c  demo_utils.h  firmware_update.c  firmware_update.h  iosched.c  iosched.h  lwm2m_gateway.c  lwm2m_gateway.h  net_traffic_interceptor.c  net_traffic_interceptor.h  objects.h  software_mgmt.c  software_mgmt.h  utils.c  utils.h  wget_downloader.c  wget_downloader.h
demo/objects/: apn_conn_profile.c  binary_app_data_container.c  cell_connectivity.c  conn_monitoring.c  conn_statistics.c  device.c  download_diagnostics.c  event_log.c  ext_dev_info.c  firmware_update.c  geopoints.c  ip_ping.c  ipso_objects.c  location.c  portfolio.c  test.c
demo/objects/gateway_end_devices/: binary_app_data_container.c  binary_app_data_container.h  push_button_object.c  push_button_object.h  temperature_object.c  temperature_object.h
doc/: CMakeLists.txt
doc/sphinx/: Makefile  make.bat  snippet_sources.md5
doc/sphinx/extensions/: file_dirtiness_checker.py  small_literal.py  snippet_source.py
doc/sphinx/source/: APIReference.rst  API_description.rst  AdvancedTopics.rst  AdvancedTutorial.rst  BasicClient.rst  BasicTutorial.rst  CommercialFeatures.rst  Commercial_support.rst  Compiling_client_applications.rst  Embedded_IP.rst  FirmwareUpdateTutorial.rst  Introduction.rst  KnownIssues.rst  LwM2M.rst  LwM2MGateway.rst  Migrating.rst  PortingGuideForNonPOSIXPlatforms.rst  Tools.rst  conf.py.in  index.rst
doc/sphinx/source_api/: BackToDocumentation.rst  conf.py.in  index.rst
examples/: CMakeLists.txt  test_examples.md5
examples/anjay_basic/: anjay_net_impl.c  main.c
examples/anjay_basic_with_firmware_update/: anjay_net_impl.c  firmware_update.c  firmware_update.h  main.c
examples/anjay_basic_with_send/: main.c
examples/bootstrap/: CMakeLists.txt  bootstrap_event_loop.c  bootstrap_event_loop.h  main.c
examples/commercial-features/: CMakeLists.txt
examples/commercial-features/CF-CorePersistence/: CMakeLists.txt
examples/commercial-features/CF-EST/: CMakeLists.txt
examples/commercial-features/CF-EST-PKCS11/: CMakeLists.txt
examples/commercial-features/CF-NIDD/: CMakeLists.txt
examples/commercial-features/CF-OSCORE/: CMakeLists.txt
examples/commercial-features/CF-PKCS11/: CMakeLists.txt
examples/commercial-features/CF-PSA-PKI/: CMakeLists.txt
examples/commercial-features/CF-PSA-PSK/: CMakeLists.txt
examples/commercial-features/CF-PSA-bootstrap/: CMakeLists.txt
examples/commercial-features/CF-PSA-management/: CMakeLists.txt
examples/commercial-features/CF-SMS/: CMakeLists.txt
examples/commercial-features/CF-SMS-PSK/: CMakeLists.txt
examples/commercial-features/CF-SMS-UDP/: CMakeLists.txt
examples/commercial-features/CF-SmartCardBootstrap/: CMakeLists.txt
examples/compat/: anj_net_impl.c  event_loop.c  event_loop.h  net_integration.c  net_integration.h
examples/custom-network/: CMakeLists.txt
examples/custom-network/bind/: CMakeLists.txt
examples/custom-network/ip-stickiness/: CMakeLists.txt
examples/custom-network/minimal/: CMakeLists.txt
examples/custom-network/remote-host-port/: CMakeLists.txt
examples/custom-network/shutdown-remote-hostname/: CMakeLists.txt
examples/custom-network/stats/: CMakeLists.txt
examples/custom-tls/: CMakeLists.txt
examples/custom-tls/certificates-advanced/: CMakeLists.txt
examples/custom-tls/certificates-advanced-fake-dane/: CMakeLists.txt
examples/custom-tls/certificates-basic/: CMakeLists.txt
examples/custom-tls/config-features/: CMakeLists.txt
examples/custom-tls/minimal/: CMakeLists.txt
examples/custom-tls/resumption-buffer/: CMakeLists.txt
examples/custom-tls/resumption-simple/: CMakeLists.txt
examples/custom-tls/stub/: CMakeLists.txt
examples/custom-tls/tcp-support/: CMakeLists.txt
examples/firmware_update/: CMakeLists.txt  example_config.h  firmware_update.c  firmware_update.h  main.c
examples/minimal_client/: CMakeLists.txt  example_config.h  main.c
examples/send/: CMakeLists.txt  example_config.h  main.c
examples/tutorial/: BC1  BC2  BC3  BC4  BC5  BC6  CMakeLists.txt
examples/tutorial/AT-AccessControl/: CMakeLists.txt
examples/tutorial/AT-Bootstrap/: CMakeLists.txt
examples/tutorial/AT-Certificates/: CMakeLists.txt
examples/tutorial/AT-CustomEventLoop/: CMakeLists.txt
examples/tutorial/AT-CustomObjects/: CMakeLists.txt
examples/tutorial/AT-Downloader/: CMakeLists.txt
examples/tutorial/AT-IpsoObjects/: CMakeLists.txt
examples/tutorial/AT-Persistence/: CMakeLists.txt
examples/tutorial/AT1/: CMakeLists.txt
examples/tutorial/AT2/: CMakeLists.txt
examples/tutorial/AT3-cert/: CMakeLists.txt
examples/tutorial/AT3-psk/: CMakeLists.txt
examples/tutorial/AT4/: CMakeLists.txt
modules/access_control/: CMakeLists.txt
modules/attr_storage/: CMakeLists.txt
test/codegen/: CMakeLists.txt
test/codegen/input/: read.xml  (+3 more)
test/fuzz/: CMakeLists.txt
test/integration/: CMakeLists.txt  runtest.py
tests/codegen/: CMakeLists.txt  check_with_object_registry.sh
tests/fluf/: CMakeLists.txt  bigdata.h  bootstrap_discover_payload.c  cbor_decoder_ll.c  cbor_encoder.c  cbor_in.c  coap_udp_msg.c  discover_payload.c  lwm2m_cbor_encoder.c  lwm2m_cbor_in.c  lwm2m_decode.c  lwm2m_prepare.c  opaque_in.c  opaque_out.c  options.c  register_payload.c  senml_cbor_encoder.c  senml_cbor_in.c  text_encoder.c  text_in.c  tlv_in.c  utils.c
tests/fuzz/: CMakeLists.txt
tests/integration/: CMakeLists.txt  run_tests.sh.in  runtest.py
(+1470 files in other folders)
